--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
     <script src="script.js" defer></script>
     <link rel="stylesheet" href="style.css">
+
+
+    <!-- FONTE -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
@@ -30,6 +37,58 @@
         <button id="reset">Reset</button>
 
         <h1 id="rodadas">Rodada</h1>
+
+
+
+
+        <div class="container">
+            <div class="deck">
+                <div class="card a">
+                    <span class="numero">14</span>
+                    <span class="energia">8</span>
+                </div>
+
+                <div class="card b">
+                    <span class="numero">5</span>
+                    <span class="energia">2</span>
+                </div>
+                
+                <div class="card c">
+                    <span class="numero">2</span>
+                    <span class="energia">1</span>
+                </div>
+
+                <div class="card d">
+                    <span class="numero">24</span>
+                    <span class="energia">18</span>
+                </div>
+
+                <div class="card e">
+                    <span class="numero">3</span>
+                    <span class="energia">18</span>
+                </div>
+                <div class="card f">
+                    <span class="numero">4</span>
+                    <span class="energia">18</span>
+                </div>
+                <div class="card g">
+                    <span class="numero">6</span>
+                    <span class="energia">18</span>
+                </div>
+                <div class="card h">
+                    <span class="numero">7</span>
+                    <span class="energia">18</span>
+                </div>
+                <div class="card i">
+                    <span class="numero">8</span>
+                    <span class="energia">18</span>
+                </div>
+                <div class="card j">
+                    <span class="numero">9</span>
+                    <span class="energia">18</span>
+                </div>
+            </div>
+        </div>
 
     </main>
 
