--- a/index.html
+++ b/index.html
@@ -15,74 +15,32 @@
 </head>
 <body>
     <header>
-        <h1>JOGO</h1>
     </header>
     <main>
-        <h1>Player</h1>
-        <p></p>
-        <ol id="cartas-player"></ol>
-        <p></p>
-        <ol id="restantes-player"></ol>
-
-        <h1>Bot</h1>
-        <p></p>
-        <ol id="cartas-bot"></ol>
-        <p></p>
-        <ol id="restantes-bot"></ol>
-
         <button id="iniciar">Iniciar Jogo</button>
         <button id="rodada">Proxima Rodada</button>
         <button id="reset">Reset</button>
 
-        <h1 id="rodadas">Rodada</h1>
+        <div class="locais bot">
+            <div class="local umb"></div>
+            <div class="local doisb"></div>
+            <div class="local tresb"></div>
+        </div>
+
+        <div class="tabuleiro">
+            <div class="lugar um"></div>
+            <div class="lugar dois"></div>
+            <div class="lugar tres"></div>
+        </div>
+
+        <div class="locais player">
+            <div class="local ump"></div>
+            <div class="local doisp"></div>
+            <div class="local tresp"></div>
+        </div>
 
         <div class="container">
-            <div class="deck">
-                <div class="card a">
-                    <span class="numero">14</span>
-                    <span class="energia">8</span>
-                </div>
-
-                <div class="card b">
-                    <span class="numero">5</span>
-                    <span class="energia">2</span>
-                </div>
-                
-                <div class="card c">
-                    <span class="numero">2</span>
-                    <span class="energia">1</span>
-                </div>
-
-                <div class="card d">
-                    <span class="numero">24</span>
-                    <span class="energia">18</span>
-                </div>
-
-                <div class="card e">
-                    <span class="numero">3</span>
-                    <span class="energia">18</span>
-                </div>
-                <div class="card f">
-                    <span class="numero">4</span>
-                    <span class="energia">18</span>
-                </div>
-                <div class="card g">
-                    <span class="numero">6</span>
-                    <span class="energia">18</span>
-                </div>
-                <div class="card h">
-                    <span class="numero">7</span>
-                    <span class="energia">18</span>
-                </div>
-                <div class="card i">
-                    <span class="numero">8</span>
-                    <span class="energia">18</span>
-                </div>
-                <div class="card j">
-                    <span class="numero">9</span>
-                    <span class="energia">18</span>
-                </div>
-            </div>
+            <div class="deck"></div>
         </div>
 
     </main>
